# football_badges

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  football_demo.py  formate.toml  lint_roller.sh  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  api.rst  conf.py  contributing.rst  example.py  example.rst  index.rst  license.rst  requirements.txt
doc-source/_templates/sidebar/: navigation.html
doc-source/api/: football_badges.rst
football_badges/: __init__.py  __main__.py  default-widths.json  utils.py
tests/: requirements.txt  test_football_badges.py  test_open_in_browser.py
