[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "football_badges"
version = "0.1.0"
description = "Create a GitHub-style badge showing the score of a football match."
readme = "README.rst"
keywords = [ "github", "gh-badges", "badge", "shield", "football", "sport",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/football_badges"
"Issue Tracker" = "https://github.com/domdfcoding/football_badges/issues"
"Source Code" = "https://github.com/domdfcoding/football_badges"
Documentation = "https://football_badges.readthedocs.io/en/latest"

[project.optional-dependencies]
pil-measurement = [ "pillow<6,>=5",]
all = [ "pillow<6,>=5",]

[tool.whey]
base-classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "Typing :: Typed",]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "Apache-2.0"
additional-files = [ "include football_badges/*.svg", "include football_badges/*.json",]
